# waveAnim

./: .gitignore  .pre-commit-config.yml  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
sine_wave_animator/: main.py
tests/: test_sine_wave_animator.py
